syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


// Defines import path of the package which will contain generated code
option go_package="go-bank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Go bank";
        version: "1.1";
        contact: {
          name: "";
          url: "";
          email: "";
        };
      };
};

service UserService { 
    rpc CreateUser(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation)= {
            summary: "Create new user",
            description: "Used to create new user"
        };
    };
    rpc LoginUser(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation)= {
            summary: "Login existing user",
            description: "Used to login user and get tokens"
        };
    };
    rpc UpdateUser(UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            patch: "/v1/update_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation)= {
            summary: "Update existing user",
            description: "Used to update user"
        };
    };
}


message CreateRequest {
    string username  = 1;
    string email  = 2;
    string full_name  = 3;
    string password = 4;
}

message CreateResponse {
    string message = 1;
}

message LoginRequest {
    string username  = 1;
    string password = 2;
}

message LoginResponse {
    string session_id=1;
    string username=2;
    string access_token=3;
    google.protobuf.Timestamp access_token_expire=4;
    string refresh_token=5;
    google.protobuf.Timestamp refresh_token_expire=6;
}

message UpdateRequest {
    string username  = 1;
    optional string email  = 2;
    optional string full_name  = 3;
    optional string password = 4;
}

message UpdateResponse {
    string message = 1;
}